Fix process execution and logging thread management in Utility class
- Refactored exec() methods to use ProcessBuilder with redirectErrorStream to merge stderr into stdout and reduce thread usage
- Replaced unmanaged raw threads with fixed-size thread pool (max 4 threads) using daemon threads with background priority
- Added proper thread naming and lifecycle management to prevent excessive thread creation and blocking issues
- Modified LOG_EXECUTOR to use bounded thread pool and prevent resource exhaustion during native process execution
- Updated process cleanup logic to properly close streams and prevent resource leaks

The changes address thread blocking issues and improve resource management when executing native processes like libuz.so, tun2socks, and pdnsd while maintaining proper logging functionality.